Control fix on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,13 @@ kbd{
   border-radius:3px;
   /* margin: 2px 6px; */
   padding:1px 8px;
+
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
 }
 kbd:hover{
   color: #ffa502;
